tdf#93390 correctly handle back-and-forth between numeric and text value

Change-Id: I06711afd5d668816608661f0fe433efd93fef99e
Reviewed-on: https://gerrit.libreoffice.org/19372
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 43769b7aebd6e89c5d9260b244e34d0858e99216)